--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -142,11 +142,22 @@
                         </div>
                     </div>
                     <div class="row mt-3 collapse {{ (form.vars.data.tutoring == 1) ? 'show' : '' }}" id="collapseTutoring" >
-                        <div class="col-md-auto">
-                            {{ form_widget(form.tutoringTeacher) }}
-                            {{ form_widget(form.tutoringStudent) }}
+                        <div class="col">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    {{ form_widget(form.tutoringTeacher) }}
+                                    {{ form_widget(form.tutoringStudent) }}
+                                </div>
+                                <div class="col-md-auto">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    {{ form_widget(form.tutoringDescription) }}
+                                    <label alt="Dates, lieux, enseignants, ..." placeholder="Dates, lieux, enseignants, ..."></label>
+                                </div>
+                            </div>
                         </div>
-                            {{ form_widget(form.tutoringDescription) }}
                     </div>
                     <div class="row mt-3">
                         <div class="col">
