objectives tab equipments template

--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -62,7 +62,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link" id="tab-5"
-                       data-route=""
+                       data-route="{{ path('edit_equipments_course_info', { 'id': courseInfo.id }) }}"
                        role="tab" data-toggle="tab" href="#panel_tab-5"
                        aria-controls="panel_tab-5" aria-selected="false">
                         Matériel et ressources
