--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -5,8 +5,22 @@
 {% endblock %}
 
 {% block main %}
+
+    {% form_theme form with [
+    'form/equipments_field.html.twig'
+    ] %}
+
+
     {{ form_start(form) }}
 
+    <div class="row mt-3">
+        <div class="col">
+            <h6 class="my-3">
+                Matériel obligatoire
+            </h6>
+            {{form_widget(form.equipments)}}
+        </div>
+    </div>
     <div class="row mt-3">
         <div class="col">
             <h6 class="my-3">
