equipments tab listEquipments

--- a/app/Resources/views/form/equipments_field.html.twig
+++ b/app/Resources/views/form/equipments_field.html.twig
@@ -24,6 +24,7 @@
                     <label alt="Préciser si nécessaire" placeholder="Préciser"></label>
                 </div>
             </div>
+            {{ form_widget(equipment.equipment) }}
             {{ form_widget(equipment) }}
         </div>
     </div>
