--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -18,7 +18,14 @@
             <h6 class="my-3">
                 Matériel obligatoire
             </h6>
-            {{form_widget(form.equipments)}}
+            <div class="row">
+                <div class="col border ml-3 mr-3 p-1">
+                    {{form_widget(form.listEquipments)}}
+                </div>
+                <div class="col border ml-3 mr-3 p-1">
+                    {{form_widget(form.equipments)}}
+                </div>
+            </div>
         </div>
     </div>
     <div class="row mt-3">
