--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -7,7 +7,8 @@
 {% block main %}
 
     {% form_theme form with [
-    'form/equipments_field.html.twig'
+        'form/equipments_field.html.twig',
+        'form/choices_equipments_field.html.twig'
     ] %}
 
 
