equipments tab js

--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -61,7 +61,71 @@
 {% block javascripts %}
 
     <script>
+
+        function setEquipmentInfos(el, data){
+            el.find('.equipment-label').html(data['label']);
+            el.find('select[id$=_equipment]').val(data['equipment_id']);
+            el.addClass(data['classtype']);
+        }
+
         $(document).ready(function() {
+
+            /**
+             * Init equipments collection
+             */
+            var equipmentsClassList = $('.list-equipments');
+            var equipmentsCollectionHolder = $('#equipments');
+            equipmentsCollectionHolder.data('index', equipmentsCollectionHolder.find('.equipment').length);
+
+            // Equipments collection holder sortable
+            equipmentsCollectionHolder.sortable( {
+                group: {
+                    name: "equipments"
+                },
+                handle: ".equipment-collection-move",
+                sort: true,
+                animation: 150,
+                onAdd: function(e){
+                    var item = $(e.item);
+                    var form = addFormToCollection(equipmentsCollectionHolder);
+                    var label = item.find('input.equipment-label').val();
+                    var equipment_id = item.find("input.equipment-id").val();
+                    var classtype = item.find("input.equipment-class").val();
+                    setEquipmentInfos(form, {
+                        'label': label,
+                        'equipment_id': equipment_id,
+                        'classtype': classtype
+                    });
+                    item.replaceWith(form);
+                }
+            } );
+
+            // Equipments lists sortable
+            equipmentsClassList.sortable( {
+                group: {
+                    name: "equipments",
+                    pull: 'clone',
+                    put: false
+                },
+                sort: false,
+                animation: 150
+            } );
+
+            /**
+             * Remove a equipment from collection
+             */
+            equipmentsCollectionHolder.on('click', '.equipment-collection-remove', function(){
+                if(confirm("Êtes-vous sûr(e) de vouloir supprimer cette évaluation ?")) {
+                    var form = $(this).closest("div.equipment");
+                    form.fadeOut({
+                        always: function () {
+                            form.remove();
+                        }
+                    });
+                }
+            });
+
+            
 
             /**
              * Submit the form
@@ -75,6 +139,11 @@
 
                 var form = $(this)[0];
                 var data = new FormData(form);
+
+                // Set equipments order
+                equipmentsCollectionHolder.find('div.equipment').each(function(order){
+                    $(this).find("input[id$='_order']").val(order+1);
+                });
 
                 SILTools.spinner.fadeIn( {
                     always: function(){
