--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -163,7 +163,7 @@
                     </div>
                     <div class="row">
                         <div class="col col-4 align-self-center">
-                            <img style="max-width: 130px;" class="w-100" src="{{ asset('images/presentiel.png') }}">
+                            <img style="max-width: 130px;" class="w-100" src="{{ asset('images/in_class_128.png') }}">
                         </div>
                         <div class="col">
                             <div class="row">
@@ -211,7 +211,7 @@
                     </div>
                     <div class="row">
                         <div class="col col-3 align-self-center">
-                            <img style="max-width: 130px;" class="w-100" src="{{ asset('images/hybride.png') }}">
+                            <img style="max-width: 130px;" class="w-100" src="{{ asset('images/hybrid_128.png') }}">
                         </div>
                         <div class="col">
                             <div class="row">
