--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -156,9 +156,9 @@
             </div>
             <div class="col-md-4 media d-flex align-items-center">
                 {% if course.teachingMode == "class" %}
-                    <img class="w-50 mx-3" src="{{ asset('images/presentiel.png') }}">
+                    <img class="w-50 mx-3" src="{{ asset('images/in_class_white_128.png') }}">
                 {% elseif course.teachingMode == "hybrid" %}
-                    <img class="w-50 mx-3" src="{{ asset('images/hybride.png') }}">
+                    <img class="w-50 mx-3" src="{{ asset('images/hybrid_white_128.png') }}">
                 {% endif %}
                 <span class="font-weight-bold media-body d-flex flex-column justify-content-center align-items-start"> 
                     <span>{{course.teachingMode}}</span>
