Fix in frame objectives tab

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
 {% if in_iframe == false %}
     {% set container_class = 'container' %}
 {% else %}
-    {% set container_class = 'container-fluid p-0' %}
+    {% set container_class = 'container-fluid' %}
 {% endif %}
 
 <html lang="{{ app.request.locale|lower }}">
