--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -57,7 +57,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row border border-primary rounded p-2 my-3">
+            <div class="row border border-primary rounded p-2 my-3 mx-1">
                 <div class="col">
                     <div class="row mb-2">
                         <div class="col">
@@ -91,7 +91,7 @@
                     <h5>Prérequis</h5>
                 </div>
             </div>
-            <div class="row border border-primary rounded p-2 my-3">
+            <div class="row border border-primary rounded p-2 my-3 mx-1">
                 <div class="col">
                     <div class="row mb-2">
                         <div class="col">
@@ -125,7 +125,7 @@
                     <h5>Remédiation / Aide à la réussite</h5>
                 </div>
             </div>
-            <div class="row border border-primary rounded p-2 my-3">
+            <div class="row border border-primary rounded p-2 my-3 mx-1">
                 <div class="col">
                     <div class="row mb-2">
                         <div class="col">
