--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -53,7 +53,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link" id="tab-4"
-                       data-route=""
+                       data-route="{{ path('edit_mcc_course_info', { 'id': courseInfo.id }) }}"
                        role="tab" data-toggle="tab" href="#panel_tab-4"
                        aria-controls="panel_tab-4" aria-selected="false">
                         Modalités d'évaluation
