--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col">
                     {{ form_widget(form.period) }}
-                    <label alt="Période" placeholder="Période"></label>
+                    <label alt="Période (facultatif)" placeholder="Période (facultatif)"></label>
                 </div>
             </div>
             <div class="row">
@@ -46,6 +46,7 @@
     </div>
     <div class="row mt-2">
         <div class="col-6">
+            {{ form_errors(form.summary) }}
             {{ form_widget(form.summary) }}
         </div>
         <div class="col-6">
@@ -86,6 +87,7 @@
                         <div class="{{ imageContentClasses }}" id="media_image_container" role="tabpanel">
                             <div class="row">
                                 <div class="col">
+                                    {{ form_errors(form.image) }}
                                     {{ form_widget(form.image) }}
                                 </div>
                             </div>
