--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -359,8 +359,15 @@
                             url: '{{ path('save_objectives_course_info', { 'id': courseInfo.id })|escape('js') }}',
                             data: form.serialize()
                         }).done(function(response){
-                            if(response.type !== undefined && response.message !== undefined) {
-                                SILTools.alert(response.type, response.message, false);
+                            if(response.messages !== undefined) {
+                                response.messages.forEach(function(message){
+                                    if (message.type !== undefined && message.message !== undefined) {
+                                        SILTools.alert(message.type, message.message, false);
+                                    }
+                                });
+                            }
+                            if(response.render !== undefined && response.render !== null) {
+                                $('#panel_tab-3').html(response.render);
                             }
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
