--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -31,13 +31,13 @@
             <div class="row">
                 <div class="col">
                     {{ form_widget(form.domain) }}
-                    <label alt="Domaine" placeholder="Domaine"></label>
+                    <label alt="Domaine *" placeholder="Domaine *"></label>
                 </div>
             </div>
         </div>
         <div class="col">
             <h6>
-                Quel est le niveau de ce cours ?
+                Quel est le niveau de ce cours ? *
             </h6>
             <ul>
                 {{ form_widget(form.level) }}
@@ -46,6 +46,9 @@
     </div>
     <div class="row mt-2">
         <div class="col-6">
+            <h6>
+                Résumé *
+            </h6>
             {{ form_errors(form.summary) }}
             {{ form_widget(form.summary) }}
         </div>
@@ -53,7 +56,7 @@
             <div class="row">
                 <div class="col">
                     <h6>
-                        Télécharger une vidéo ou une image de présentation du cours qui respecte les droits d'auteur (illustration, photo de votre TD, &hellip;).
+                        Télécharger une vidéo ou une image de présentation du cours qui respecte les droits d'auteur (illustration, photo de votre TD, &hellip;). *
                     </h6>
                 </div>
             </div>
@@ -153,7 +156,7 @@
         <div class="col">
             <div class="row mb-3">
                 <div class="col">
-                    <strong>Quel est votre mode d'enseignement ?</strong>
+                    <strong>Quel est votre mode d'enseignement ? *</strong>
                 </div>
             </div>
             <div class="row teaching-hours">
