--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -24,7 +24,7 @@
     ] %}
 
     {{ form_start(form) }}
-    <div class="row">
+    <div class="row mt-3">
         <div class="col">
             <button type="button" id="addSectionButton"
                     class="btn btn-primary btn-block btn-sm">
