--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -51,7 +51,7 @@
             </div>
             <div class="row evaluation-info">
                 <div class="col-md-auto align-self-center">
-                    <small>Evalué par</small>
+                    <small>Evalué par *</small>
                 </div>
                 <div class="col-md-auto align-self-center">
                     <small>
