--- a/app/Resources/views/form/evaluations_field.html.twig
+++ b/app/Resources/views/form/evaluations_field.html.twig
@@ -21,11 +21,11 @@
             <div class="row">
                 <div class="col-10 pr-1">
                     {{ form_widget(evaluation.description) }}
-                    <label alt="Préciser si nécessaire" placeholder="Préciser"></label>
+                    <label alt="Préciser *" placeholder="Préciser *"></label>
                 </div>
                 <div class="col-2 pl-1">
                     {{ form_widget(evaluation.evaluationRate) }}
-                    <label alt="%" placeholder="%"></label>
+                    <label alt="% *" placeholder="% *"></label>
                 </div>
             </div>
             {{ form_widget(evaluation.activity) }}
