--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -44,7 +44,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon text-light"></span>
                 </button> 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item d-flex flex-row align-items-center border-right">
                             <a class="nav-link text-light" href="#Presentation">Présentation</a>
@@ -71,6 +71,7 @@
                             <a class="nav-link text-light" href="#Mot_fin">Mot de la fin</a>
                         </li>
                     </ul>
+                </div>
             </nav>
         </div>
 
