--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -120,6 +120,14 @@
                 </div>
 
             </div>
+            <div class="row mt-3">
+                <div class="col">
+                    <button class="btn btn-outline-primary btn-block submit" type="submit">
+                        <i class="fas fa-file-upload"></i>
+                        Publier
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
