--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -122,7 +122,11 @@
             </div>
             <div class="row mt-3">
                 <div class="col">
-                    <button class="btn btn-outline-primary btn-block submit" type="submit">
+                    {% if courseInfoHelper.canBePublished(courseInfo) %}
+                    <button class="btn btn-outline-primary btn-block submit" aria-disabled="false" type="submit">
+                    {% else %}
+                    <button class="btn btn-outline-primary btn-block submit disabled" aria-disabled="true" type="submit">
+                    {% endif %}
                         <i class="fas fa-file-upload"></i>
                         Publier
                     </button>
