--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -125,7 +125,7 @@
                     {% if courseInfoHelper.canBePublished(courseInfo) %}
                     <button class="btn btn-outline-primary btn-block submit" aria-disabled="false" type="submit">
                     {% else %}
-                    <button class="btn btn-outline-primary btn-block submit disabled" aria-disabled="true" type="submit">
+                    <button class="btn btn-outline-primary btn-block submit " disabled aria-disabled="true" type="submit">
                     {% endif %}
                         <i class="fas fa-file-upload"></i>
                         Publier
