--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -102,16 +102,7 @@
                             cache: false,
                             timeout: 600000
                         }).done(function(response){
-                            if(response.messages !== undefined) {
-                                response.messages.forEach(function(message){
-                                    if (message.type !== undefined && message.message !== undefined) {
-                                        SILTools.alert(message.type, message.message, false);
-                                    }
-                                });
-                            }
-                            if(response.render !== undefined && response.render !== null) {
-                                $('#panel_tab-7').html(response.render);
-                            }
+                            disablePublishButton('#panel_tab-7');
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
                         });
