--- a/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
@@ -113,7 +113,8 @@
                             cache: false,
                             timeout: 600000
                         }).done(function(response){
-                            disablePublishButton('#panel_tab-4');
+                            response.renderTabId = 'panel_tab-4';
+                            Syllabus.handleAjaxResponse(response);
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
                         });
