--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -314,7 +314,8 @@
                             //cache: false,
                             //timeout: 600000
                         }).done(function(response){
-                            disablePublishButton('#panel_tab-2');
+                            response.renderTabId = 'panel_tab-2';
+                            Syllabus.handleAjaxResponse(response);
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
                         });
