--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -160,7 +160,8 @@
                             cache: false,
                             timeout: 600000
                         }).done(function(response){
-                            disablePublishButton('#panel_tab-5');
+                            response.renderTabId = 'panel_tab-5';
+                            Syllabus.handleAjaxResponse(response);
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
                         });
