--- a/app/Resources/views/course/edit_infos_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_infos_course_info_tab.html.twig
@@ -69,7 +69,8 @@
                             cache: false,
                             timeout: 600000
                         }).done(function(response){
-                            disablePublishButton('#panel_tab-6');
+                            response.renderTabId = 'panel_tab-6';
+                            Syllabus.handleAjaxResponse(response);
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
                         });
