--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -359,7 +359,8 @@
                             url: '{{ path('save_objectives_course_info', { 'id': courseInfo.id })|escape('js') }}',
                             data: form.serialize()
                         }).done(function(response){
-                            disablePublishButton('#panel_tab-3');
+                            response.renderTabId = 'panel_tab-3';
+                            Syllabus.handleAjaxResponse(response);
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
                         });
