--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -421,7 +421,8 @@
                             cache: false,
                             timeout: 600000
                         }).done(function(response){
-                            disablePublishButton('#panel_tab-1');
+                            response.renderTabId = 'panel_tab-1';
+                            Syllabus.handleAjaxResponse(response);
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
                         });
