--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -89,7 +89,7 @@
 
                 </ul>
 
-                <div class="tab-content">
+                <div class="tab-content border border-top-0 p-2">
 
                     <div class="tab-pane fade show active" id="panel_tab-1"
                          role="tabpanel" aria-labelledby="tab-1">
@@ -120,16 +120,51 @@
                     </div>
 
                 </div>
-                <div class="row mt-3">
-                    <div class="col">
-                        {% if courseInfoHelper.canBePublished(courseInfo) %}
-                        <button class="btn btn-outline-primary btn-block" type="button" id="publishButton">
-                            {% else %}
-                            <button class="btn btn-outline-primary btn-block" type="button" id="publishButton" disabled>
+
+
+                <div class="border mt-3 p-2">
+                    <div class="row mt-3">
+                        <div class="col">
+                            <dt>
+                                Création
+                            </dt>
+                            <dd>
+                                {{ courseInfo.creationDate|date }}
+                            </dd>
+                            <dt>
+                                Publication
+                            </dt>
+                            <dd>
+                                {% if courseInfo.publicationDate is not empty and courseInfo.publisher is not empty %}
+                                    <span class="badge badge-pill badge-success">Publié</span>
+                                    {{ courseInfo.publicationDate|date }} par {{ courseInfo.publisher }}
+                                {% else %}
+                                    <span class="badge badge-pill badge-danger">Non publié</span>
                                 {% endif %}
-                                <i class="fas fa-file-upload"></i>
-                                Publier
-                            </button>
+                            </dd>
+                        </div>
+                        <div class="col">
+                            <dt>
+                                Dernière modification
+                            </dt>
+                            <dd>
+                                {% if courseInfo.modificationDate is not empty and courseInfo.lastUpdater is not empty %}
+                                    {{ courseInfo.modificationDate|date }} par {{ courseInfo.lastUpdater }}
+                                {% endif %}
+                            </dd>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col">
+                            {% if courseInfoHelper.canBePublished(courseInfo) %}
+                            <button class="btn btn-outline-primary btn-block" type="button" id="publishButton">
+                                {% else %}
+                                <button class="btn btn-outline-primary btn-block" type="button" id="publishButton" disabled>
+                                    {% endif %}
+                                    <i class="fas fa-file-upload"></i>
+                                    Publier
+                                </button>
+                        </div>
                     </div>
                 </div>
             </div>
